--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
       <nav id="main-nav">
         <div class="wrapper">
           <ul>
-            <li><a href="#">Home</a></li>
+            <!-- <li><a href="#">Home</a></li>
             <li><a href="#">About Us</a></li>
-            <li><a href="#">Lessons</a></li>
+            <li><a href="#">Lessons</a></li> -->
             <li><a href="#">Portfolio</a></li>
             <li><a href="#">Blog</a></li>
             <li><a href="#">Contact</a></li>
